--- a/ForumBB/myForum/templates/myForum/create_comment.html
+++ b/ForumBB/myForum/templates/myForum/create_comment.html
@@ -1,8 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-    <form id="postForm" method="post" action="{% url 'myForum:create_comment' post=post %}">
+    <nav aria-label="breadcrumb" style="margin-top:2%">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{% url 'myForum:homepage' %}">Home</a></li>
+            <li class="breadcrumb-item"><a href="#"></a></li>
+            <li class="breadcrumb-item"><a
+                    href="{% url 'myForum:posts_list' subsection=subsection %}">{{ subsection }}</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'myForum:comments_list' subsection=subsection post=post %}">{{ post }}</a></li>
+        </ol>
+    </nav>
+    <form id="postForm" method="post" action="{% url 'myForum:create_comment' subsection=subsection post=post %}">
         {% csrf_token %}
-        {{form}}
+        {{ form }}
         <input type="submit" value="Create new comment" class="btn btn-primary btn-large">
     </form>
 {% endblock %}
