--- a/ForumBB/myForum/templates/myForum/comments_list.html
+++ b/ForumBB/myForum/templates/myForum/comments_list.html
@@ -143,14 +143,15 @@
             {% endif %}
         </div>
     </div>
-
-    <form method="post" action="{% url 'myForum:createcomment' subsection=subsection post=post %}">
-        {% csrf_token %}
-        {{ form.media }}
-        {{ form.content }}
-        <br>
-        <input type="submit" value="Submit" class="btn btn-primary">
-    </form>
+    {% if user.is_authenticated %}
+        <form method="post" action="{% url 'myForum:createcomment' subsection=subsection post=post %}">
+            {% csrf_token %}
+            {{ form.media }}
+            {{ form.content }}
+            <br>
+            <input type="submit" value="Submit" class="btn btn-primary">
+        </form>
+    {% endif %}
 
 
 {% endblock %}
